# ibkr_bridge

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.local.yml  docker-compose.test.yml  docker-compose.yml  gen_python_types.py  pyproject.toml  requirements-dev.txt  schema_gen.py
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml
cli/: __init__.py  __main__.py  order.py
cli/core/: __init__.py  deploy.py  destroy.py  sync.py
docs/runbooks/: vnc-pending.md
env_examples/: env  env.droplet  env.test
infra/caddy/: Caddyfile  docker-entrypoint.sh
infra/caddy/domains/: ibkr-vnc.caddy
infra/caddy/sites/: ibkr-bridge.caddy
infra/gateway-controller/: Dockerfile  entrypoint.sh  gateway-status.sh  monitor-gateway.sh  start-gateway.sh
infra/novnc/: index.html
services/bridge/: Dockerfile  bridge_models.py  main.py  requirements.txt
services/bridge/bridge_routes/: __init__.py  constants.py  health.py  middlewares.py  order_place.py  test_middlewares.py  test_order_place.py  test_trades_list.py  test_ws_events.py  trades_list.py  ws_events.py
services/bridge/client/: __init__.py  event_hub.py  orders.py  test_event_hub.py  test_orders.py  trades.py
services/bridge/tests/e2e/: conftest.py  test_smoke.py  test_ws_events.py
services/shared/: __init__.py
terraform/: cloud-init.sh  main.tf  outputs.tf  variables.tf
types/: index.d.ts
types/http/: index.d.ts  types.d.ts  types.schema.json
types/python/: pyproject.toml
types/python/ibkr_bridge_types/: __init__.py  models.py
types/typescript/: index.d.ts  package.json
types/typescript/http/: index.d.ts  types.d.ts  types.schema.json
